--- a/how to play.html
+++ b/how to play.html
@@ -13,4 +13,6 @@
         <a class="active" href="how to play.html">How to play</a>
         <a href="contact us.html">Contact Us</a>
     </div>
+    <img src="download (6).jfif">
+    <p>To play steal a brainrot first you need to have a roblox account if you dont have one go to roblox.com and make one its free after that you need to download roblox on your device which coud be a phone or a computer or gaming systems after that you need to search up steal a brainrot and click play once you are in the game you need a brainrot, if you see a brainrot that you can get then buy it after that you need to wait for it or keep getting more to give you money and then you can buy better brainrots. Also you should keep your brainrots safe from otheers or else people could "steal a brainrot" But if you see that others base doesn't have the bars you could steal any brainrot you see.</p>
 </html>
