--- a/information.html
+++ b/information.html
@@ -13,5 +13,12 @@
         <a href="how to play.html">How to play</a>
         <a href="contact us.html">Contact Us</a>
     </div>
+    <center>
+    <img src="download (5).jfif">
+    </center>
+    <p>The name if this game is steal a brainrot this game is played on roblox which means you could play it on a computer, phone, nitendo switch and gaming system it is a game were the brainrots are like your bank accounters and the better the brainrot the higher amount it gives you.
+        There are different categories of brainrots like common, uncommon, rare, epic, legendary, mythical, secret and brainrot gods.The higher the categories means that the brainrot will cost more and gives more And you can also rebirth your base to get more money per brainrot.
+    </p>
+    <center></center>
 </body>
 </html>
