--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             </a>
         </div>
     </div>
-    <p>I have alot of brainrot gods</p>
+    <footer>cooldude's website contact for more <img src="tiktok.png" alt="tiktok logo" width="30" height="30"> @cooldude_games
+    </footer>
 </body>
 </html>
