--- a/contact us.html
+++ b/contact us.html
@@ -13,5 +13,8 @@
         <a href="how to play.html">How to play</a>
         <a href="contact us.html">Contact Us</a>
     </div>
+    <h1>Contact us</h1>
+    <h2>Address: 38 briasdale creasent L3CS8,Welland, On, Canada</h2>
+    <h2>Email: agunung1503@gmail.com</h2>
 </body>
 </html>
